add create_block_code function

--- a/config_v2.json
+++ b/config_v2.json
@@ -78,5 +78,10 @@
                 "output":"table_addr"
             }
         }
+    },
+    "assignments":
+    {
+        "north":"south",
+        "east":"west"
     }
 }
