--- a/config_v2.json
+++ b/config_v2.json
@@ -1,61 +1,55 @@
-{
-   "module_name":"Pusher",
-
-   "dimensions":[8,1],
-
-   "global_variables" :
-   {
-        "MSB":8
-   },
-
-   "interfaces":
-    {
-      "CLK":
-      {
-         "signals":
-         {
-            "clock":0
-         },
-         "IO":
-         {
-            "input": ["clock"]
-         }
+{  
+  "module_name":"Pusher",
+  "dimensions":[  
+    8,
+    1
+  ],
+  "global_variables":{  
+    "MSB":8
+  },
+  "interfaces":{  
+    "CLK":{  
+      "signals":{  
+        "clock":0
       },
-      "RESET":
-      {
-         "signals":
-         {
-            "reset":0
-         },
-         "IO":
-         {
-            "input": ["reset"]
-         }
-      },
-      "IN":{
-         "signals":
-         {
-            "item_in":1
-         },
-         "IO":
-         {
-            "input": ["item_in"]
-         }
-      },
-      "OUT":
-      {
-         "signals":
-         {
-            "item_out":1
-         },
-         "IO":
-         {
-            "output": ["item_out"]
-         }
+      "IO":{  
+        "input":[  
+          "clock"
+        ]
       }
     },
-   "assignments":
-   {
-      "item_in":"item_out"
-   }
+    "RESET":{  
+      "signals":{  
+        "reset":0
+      },
+      "IO":{  
+        "input":[  
+          "reset"
+        ]
+      }
+    },
+    "IN":{  
+      "signals":{  
+        "item_in":1
+      },
+      "IO":{  
+        "input":[  
+          "item_in"
+        ]
+      }
+    },
+    "OUT":{  
+      "signals":{  
+        "item_out":1
+      },
+      "IO":{  
+        "output":[  
+          "item_out"
+        ]
+      }
+    }
+  },
+  "assignments":{  
+    "item_in":"item_out"
+  }
 }
